fix background color of side menu not showing (this time for real)

--- a/src/style.css
+++ b/src/style.css
@@ -625,6 +625,7 @@ nav .icon,
         display: flex;
         flex-direction: column;
         justify-content: center;
+        background-color: rgb(28,43,73);
     }
 
     nav ul {
